# camera-calibration

./: .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeCache.txt  CMakeLists.txt  LICENSE  LICENSE.md  Makefile  README.md  cmake_install.cmake  main
src/: Util.h  get_initial_calib.cpp  get_initial_calib.h  get_initial_calib.hpp  main.cpp
test/: function-test.cpp
